@@ -278,6 +278,10 @@ Changes since 2.2.2
      that caused the modules to always be need rebuilding.
 115. src/sltoken.c: Change #if HAVE_LONG_LONG to #ifdef HAVE_LONG_LONG.
 116. src/slmath.c: Tweaked the Kahan sum for the hypot function.
+117. slsh/readline.c: Added __rline_init/reset_tty functions and used
+     them in the rline editor routines to reset the terminal before
+     calling an external editor.  This avoids problems when the editor
+     is subsequently suspended.
 
 {{{ Previous Versions
 
